--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -1,18 +1,15 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-# set your user name
-  name:  {{ .Release.Name }}
+  name: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.ReplicaNumber }}
   selector:
-    matchLabels: {{ .Release.Name }}
-# set your user name
-      app: igalyadid-hello-world
+    matchLabels:
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-# set your user name
         app: {{ .Release.Name }}
     spec:
       containers:
@@ -20,10 +17,10 @@ spec:
           terminationMessagePath: /dev/termination-log
           name: {{ .Release.Name }}
           ports:
-            - containerPort:  {{ .Values.containers.containerPort }}
+            - containerPort: {{ .Values.containers.containerPort }}
               protocol: TCP
-          imagePullPolicy: IfNotPresent
-# update with the iamge you build in part 1
+          imagePullPolicy: Always
+          terminationMessagePolicy: File
           image: {{ .Values.containers.image }}:{{ .Values.containers.tag }}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
