--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -1,3 +1,18 @@
+#this will Create Volume From our ConfigMap
+    spec:
+      volumes:
+        - name: index-html
+          configMap:
+            name: index.html
+            defaultMode: 420
+  # This will mount our File to the Pod File system
+      containers:
+      
+         volumeMounts:
+         - name: index-html
+           mountPath: /tmp/html # this will mount the html.index file to it application location
+
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
