--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 metadata:
   name: {{ .Release.Name }}
   annotations:
-    checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+    checksum/config: {{ include (print $.Template.BasePath "/ConfigMap.yaml") . | sha256sum }}
 spec:
   replicas: {{ .Values.ReplicaNumber }}
   selector:
