testing automated rollout

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
     checksum/config: {{ include (print $.Template.BasePath "/ConfigMap.yaml") . | sha256sum }}
+    rollme: {{ randAlphaNum 5 | quote }}
 spec:
   replicas: {{ .Values.ReplicaNumber }}
   selector:
