--- a/helm/templates/deployment_1.yaml
+++ b/helm/templates/deployment_1.yaml
@@ -2,19 +2,20 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-1
   annotations:
     checksum/config: {{ include (print $.Template.BasePath "/ConfigMap.yaml") . | sha256sum }}
     rollme: {{ randAlphaNum 5 | quote }}
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   replicas: {{ .Values.ReplicaNumber }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
+      app: {{ .Release.Name }}-1
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}
+        app: {{ .Release.Name }}-1
     spec:
     #this will Create Volume From our ConfigMap
       volumes:
@@ -25,7 +26,7 @@ spec:
       containers:
         - resources: {}
           terminationMessagePath: /dev/termination-log
-          name: {{ .Release.Name }}
+          name: {{ .Release.Name }}-1
           ports:
             - containerPort: {{ .Values.containers.containerPort }}
               protocol: TCP
